modified:   index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         a variety of activities for all ages. Whether you are looking for a romantic getaway or a family vacation,
         Crater Lake Resort is the place for you.
     </p>
+    <p>
+    price: $1000 USD per person
+    </p>
     <button class="buttonLight"> Book Now </button>
     </div>
 
