--- a/index.html
+++ b/index.html
@@ -28,6 +28,44 @@
     </div>
 
 </section>
+<section class="tripSingleItem">
+    <div class="leftContent">
+    <h2 class="sectionTitle">
+        Ringside Seats: A Saturn Spectacular
+    </h2>
+    <p class="sectionDescription">
+        Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
+    </p>
+    <p>
+    price: $1000 USD per person
+    </p>
+    <button class="buttonLight"> Book Now </button>
+    </div>
+
+    <div class="rightContent">
+    <img class="imageitem" src="images/Saturn.jpg" alt="craterLake">
+    </div>
+
+</section>
+<section class="tripSingleItem">
+    <div class="leftContent">
+    <h2 class="sectionTitle">
+        Red Rock Retreat: Mars' Hidden Oasis
+    </h2>
+    <p class="sectionDescription">
+        Discover the red planet like never before at Red Rock Retreat. Explore ancient Martian canyons, enjoy zero-G yoga, and sample Martian delicacies. Don't miss the sunset over Olympus Mons – it's a sight that's literally out of this world!
+    </p>
+    <p>
+    price: $1000 USD per person
+    </p>
+    <button class="buttonLight"> Book Now </button>
+    </div>
+
+    <div class="rightContent">
+    <img class="imageitem" src="images/redRock.jpg" alt="craterLake">
+    </div>
+
+</section>
 </body>
 
 </html>
