--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <title>Galactic Getaways: Your Next Adventure Awaits!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
 </head>
 <body class="bodyMain">
+    <div class="navCont">
+    <nav class="navBar">
+        <img class="logo" src="images/logo.png" alt="logo">
+        <ul class="navList">
+            <li class="navItem"><a href="#">Home</a></li>
+            <li class="navItem"><a href="#">About</a></li>
+            <li class="navItem"><a href="#">Trips</a></li>
+            <li class="navItem"><a href="#">Team</a></li>
+            <button class="buttonLight">Book a Trip</button>
+        </ul>
+    </nav>
+    </div>
 <section class="tripSingleItem">
     <div class="leftContent">
     <h2 class="sectionTitle">
@@ -17,10 +30,13 @@
         a variety of activities for all ages. Whether you are looking for a romantic getaway or a family vacation,
         Crater Lake Resort is the place for you.
     </p>
+    <div class="departureDates">
+        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
     <p>
-    price: $1000 USD per person
+        price: <span class="price">$120,000 USD</span> per person
     </p>
-    <button class="buttonLight"> Book Now </button>
+    <button class="buttonLight">Begin Booking</button>
     </div>
 
     <div class="rightContent">
@@ -36,8 +52,11 @@
     <p class="sectionDescription">
         Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
     </p>
+    <div class="departureDates">
+        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
     <p>
-    price: $1000 USD per person
+        price: $120,000 USD per person
     </p>
     <button class="buttonLight"> Book Now </button>
     </div>
@@ -55,8 +74,11 @@
     <p class="sectionDescription">
         Discover the red planet like never before at Red Rock Retreat. Explore ancient Martian canyons, enjoy zero-G yoga, and sample Martian delicacies. Don't miss the sunset over Olympus Mons – it's a sight that's literally out of this world!
     </p>
+    <div class="departureDates">
+        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
     <p>
-    price: $1000 USD per person
+    price: $120,000 USD per person
     </p>
     <button class="buttonLight"> Book Now </button>
     </div>
@@ -66,6 +88,24 @@
     </div>
 
 </section>
+<footer>
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="images/logo.png" alt="Your Logo">
+        </div>
+        <div class="footer-links">
+            <a href="#">Resources</a>
+            <a href="#">Docs</a>
+            <a href="#">Style Guide</a>
+            <a href="#">Repo </a>
+        </div>
+        <div class="footer-social">
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-twitter"></i> Twitter or X </a>
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
+        </div>
+    </div>
+</footer>
 </body>
 
 </html>
