new file:   images/rocket1.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     <p>
         price: <span class="price">$120,000 USD</span> per person
     </p>
-    <button class="buttonLight">Begin Booking</button>
+    <div class="departureDates" >
+    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+    <button class="buttonDark">Learn More</button>
+</div>
     </div>
 
     <div class="rightContent">
