--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <li class="navItem"><a href="#">About</a></li>
             <li class="navItem"><a href="#">Trips</a></li>
             <li class="navItem"><a href="#">Team</a></li>
-            <button class="buttonLight">Book a Trip</button>
+            <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In</a></li>
+            <button class="buttonLight"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Book a Trip</button>
         </ul>
     </nav>
     </div>
