modified:   images/.DS_Store 	new file:   images/First.png 	new file:   images/Second.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -32,19 +32,22 @@
         Crater Lake Resort is the place for you.
     </p>
     <div class="departureDates">
-        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+        <h3 style="margin-right: 20px;"><i class="fa-solid fa-calendar-days" style="margin-right: 4px;"></i>  Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
+    <div class="departureDates" style="margin-top: -20px;">
+        <h3 style="margin-right: 20px;"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Space Ship</h3><p> Falcon F9 by SpaceX</p>
     </div>
     <p>
         price: <span class="price">$120,000 USD</span> per person
     </p>
-    <div class="departureDates" >
+    <div class="departureDates" style="margin-top: 19px;" >
     <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
     <button class="buttonDark">Learn More</button>
 </div>
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/craterLake.jpg" alt="craterLake">
+    <img class="imageitem" src="images/First.png" alt="craterLake">
     </div>
 
 </section>
@@ -66,7 +69,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/Saturn.jpg" alt="craterLake">
+    <img class="imageitem" src="images/Second.png" alt="craterLake">
     </div>
 
 </section>
