--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <ul class="navList">
             <li class="navItem"><a href="#">Home</a></li>
             <li class="navItem"><a href="#">About</a></li>
-            <li class="navItem"><a href="#">Trips</a></li>
             <li class="navItem"><a href="#">Team</a></li>
             <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In</a></li>
             <button class="buttonLight"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Book a Trip</button>
@@ -91,7 +90,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/redRock.jpg" alt="craterLake">
+    <img class="imageitem" src="images//Third.png" alt="craterLake">
     </div>
 
 </section>
