--- a/index.html
+++ b/index.html
@@ -19,6 +19,25 @@
         </ul>
     </nav>
     </div>
+<section class="heroSection">
+    <div class="leftContent1">
+
+        <div class="heroText">
+            <h1 class="sectionTitle">Your Next Adventure Awaits!</h1>
+            <p class="sectionDescription">Galactic Getaways offers the best vacation packages in the solar system. From the
+                moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
+            <button class="buttonLight">Book a Trip</button>
+        </div>
+
+
+    </div>
+    <div class="rightContent1">
+        
+    </div>
+   
+</section>
+
+
 <section class="tripSingleItem">
     <div class="leftContent">
     <h2 class="sectionTitle">
@@ -59,12 +78,18 @@
         Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
     </p>
     <div class="departureDates">
-        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+        <h3 style="margin-right: 20px;"><i class="fa-solid fa-calendar-days" style="margin-right: 4px;"></i>  Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
+    <div class="departureDates" style="margin-top: -20px;">
+        <h3 style="margin-right: 20px;"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Space Ship</h3><p> Falcon F9 by SpaceX</p>
     </div>
     <p>
-        price: $120,000 USD per person
+        price: <span class="price">$120,000 USD</span> per person
     </p>
-    <button class="buttonLight"> Book Now </button>
+    <div class="departureDates" style="margin-top: 19px;" >
+    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+    <button class="buttonDark">Learn More</button>
+</div>
     </div>
 
     <div class="rightContent">
@@ -81,12 +106,18 @@
         Discover the red planet like never before at Red Rock Retreat. Explore ancient Martian canyons, enjoy zero-G yoga, and sample Martian delicacies. Don't miss the sunset over Olympus Mons – it's a sight that's literally out of this world!
     </p>
     <div class="departureDates">
-        <h3 style="margin-right: 20px;">Next Departures</h3><p> January / 3rd / 2024</p>
+        <h3 style="margin-right: 20px;"><i class="fa-solid fa-calendar-days" style="margin-right: 4px;"></i>  Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
+    <div class="departureDates" style="margin-top: -20px;">
+        <h3 style="margin-right: 20px;"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Space Ship</h3><p> Falcon F9 by SpaceX</p>
     </div>
     <p>
-    price: $120,000 USD per person
+        price: <span class="price">$120,000 USD</span> per person
     </p>
-    <button class="buttonLight"> Book Now </button>
+    <div class="departureDates" style="margin-top: 19px;" >
+    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+    <button class="buttonDark">Learn More</button>
+</div>
     </div>
 
     <div class="rightContent">
