modified:   images/.DS_Store 	modified:   images/heroImage.png 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div class="leftContent1">
 
         <div class="heroText">
-            <h1 class="sectionTitle">Your Next Adventure Awaits!</h1>
+            <h1 class="sectionTitle" style="font-size: 4.5em;">Your Next Adventure Awaits!</h1>
             <p class="sectionDescription">Galactic Getaways offers the best vacation packages in the solar system. From the
                 moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
-            <button class="buttonLight">Book a Trip</button>
+            <button class="buttonDark"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Get Started</button>
         </div>
 
 
