modified:   images/heroImage.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="logo" src="images/logo.png" alt="logo">
         <ul class="navList">
             <li class="navItem"><a href="#">Home</a></li>
-            <li class="navItem"><a href="#">About</a></li>
+            <li class="navItem"><a href="#">Our Ships</a></li>
             <li class="navItem"><a href="#">Team</a></li>
             <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In</a></li>
             <button class="buttonLight"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Book a Trip</button>
@@ -23,8 +23,8 @@
     <div class="leftContent1">
 
         <div class="heroText">
-            <h1 class="sectionTitle" style="font-size: 4.5em;">Your Next Adventure Awaits!</h1>
-            <p class="sectionDescription">Galactic Getaways offers the best vacation packages in the solar system. From the
+            <h1 class="sectionTitle" style="font-size: 4em;">Your Next Adventure Awaits!</h1>
+            <p class="sectionDescription" style="font-size: 1.2em;">Galactic Getaways offers the best vacation packages in the solar system. From the
                 moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
             <button class="buttonDark"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Get Started</button>
         </div>
