--- a/index.html
+++ b/index.html
@@ -23,15 +23,14 @@
     <div class="leftContent1">
 
         <div class="heroText">
-            <h1 class="sectionTitle" style="font-size: 4em;">Your Next Adventure Awaits!</h1>
-            <p class="sectionDescription" style="font-size: 1.2em;">Galactic Getaways offers the best vacation packages in the solar system. From the
+            <h1 class="sectionTitle" style="font-size: 4em; text-align: center;">Your Next Adventure Awaits!</h1>
+            <p class="sectionDescription" style="font-size: 1.2em; text-align: center !important;">Galactic Getaways offers the best vacation packages in the solar system. From the
                 moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
             <button class="buttonDark"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Get Started</button>
         </div>
 
 
     </div>
-    <div class="rightContent1">
         
     </div>
    
