modified:   index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <section class="tripSingleItem">
     <div class="leftContent">
     <h2 class="sectionTitle">
-        Ringside Seats: A Saturn Spectacular
+        Ringside Expidition: A Saturn Spectacular
     </h2>
     <p class="sectionDescription">
         Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
