modified:   login.html 	modified:   login.js

--- a/login.html
+++ b/login.html
@@ -15,9 +15,9 @@
 
     
     <!-- Initialize Firebase -->
-    <script type="module" src="firebaseConfig.js"></script>
+    <script src="firebaseConfig.js"></script>
 
     <!-- Link to your JavaScript file -->
-    <script type="module" src="login.js"></script>
+    <script  src="login.js"></script>
 </body>
 </html>
