--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Galactic Getaways: Your Next Adventure Awaits!</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
+    <script type="module" src="/src/index.js"> </script>
 </head>
 <body class="bodyMain">
     <div class="navCont">
