modified:   dist/bundle.js 	modified:   package.json 	renamed:    index.html -> src/index.html 	modified:   src/index.js 	new file:   src/registration.html 	renamed:    style.css -> src/style.css 	modified:   webpack.config.js

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body class="bodyMain">
     <div class="navCont">
     <nav class="navBar">
-        <img class="logo" src="images/logo.png" alt="logo">
+        <img class="logo" src="/images/logo.png" alt="logo">
         <ul class="navList">
             <li class="navItem"><a href="#">Home</a></li>
             <li class="navItem"><a href="#">Our Ships</a></li>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/First.png" alt="craterLake">
+    <img class="imageitem" src="/images/First.png" alt="craterLake">
     </div>
 
 </section>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/Second.png" alt="craterLake">
+    <img class="imageitem" src="/images/Second.png" alt="craterLake">
 
     </div>
 
@@ -122,14 +122,14 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images//Third.png" alt="craterLake">
+    <img class="imageitem" src="/images//Third.png" alt="craterLake">
     </div>
 
 </section>
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="images/logo.png" alt="Your Logo">
+            <img src="/images/logo.png" alt="Your Logo">
         </div>
         <div class="footer-links">
             <a href="#">Resources</a>
