new file:   assets/css/animate.min.css 	new file:   assets/css/bootstrap.min.css 	new file:   assets/css/colors/Preloader.gif 	new file:   assets/css/colors/color-2.css 	new file:   assets/css/colors/color-3.css 	new file:   assets/css/colors/color-4.css 	new file:   assets/css/colors/color-5.css 	new file:   assets/css/colors/default.css 	new file:   assets/css/colors/switch.css 	new file:   assets/css/fontawesome-all.css 	new file:   assets/css/style.css 	new file:   assets/fonts/fa-brands-400.eot 	new file:   assets/fonts/fa-brands-400.svg 	new file:   assets/fonts/fa-brands-400.ttf 	new file:   assets/fonts/fa-brands-400.woff 	new file:   assets/fonts/fa-brands-400.woff2 	new file:   assets/fonts/fa-regular-400.eot 	new file:   assets/fonts/fa-regular-400.svg 	new file:   assets/fonts/fa-regular-400.ttf 	new file:   assets/fonts/fa-regular-400.woff 	new file:   assets/fonts/fa-regular-400.woff2 	new file:   assets/fonts/fa-solid-900.eot 	new file:   assets/fonts/fa-solid-900.svg 	new file:   assets/fonts/fa-solid-900.ttf 	new file:   assets/fonts/fa-solid-900.woff 	new file:   assets/fonts/fa-solid-900.woff2 	new file:   assets/img/d1.png 	new file:   assets/img/d2.png 	new file:   assets/img/d3.png 	new file:   assets/img/side-img.jpg 	new file:   assets/js/bootstrap.min.js 	new file:   assets/js/conditionize.flexible.jquery.min.js 	new file:   assets/js/jquery-3.3.1.min.js 	new file:   assets/js/jquery.validate.min.js 	new file:   assets/js/main.js 	new file:   assets/js/popper.min.js 	new file:   assets/js/switch.js 	new file:   assets/scss/_predefine.scss 	new file:   assets/scss/_responsive.scss 	new file:   assets/scss/_template.scss 	new file:   assets/scss/_wizard.scss 	new file:   assets/scss/style.scss 	new file:   booking.html 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li class="navItem"><a href="#">Home</a></li>
             <li class="navItem"><a href="#">Our Ships</a></li>
             <li class="navItem"><a href="#">Team</a></li>
-            <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In</a></li>
+            <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In/Sign-up </a></li>
             <button class="buttonLight"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Book a Trip</button>
         </ul>
     </nav>
@@ -59,7 +59,7 @@
         price: <span class="price">$120,000 USD</span> per person
     </p>
     <div class="departureDates" style="margin-top: 19px;" >
-    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+    <a href="booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
     <button class="buttonDark">Learn More</button>
 </div>
     </div>
