--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navBar">
         <img class="logo" src="images/logo.png" alt="logo">
         <ul class="navList">
-            <li class="navItem"><a href="#">Home</a></li>
+            <li class="navItem"><a href="#">Homess</a></li>
             <li class="navItem"><a href="#">Our Ships</a></li>
             <li class="navItem"><a href="#">Team</a></li>
             <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In/Sign-up </a></li>
