new file:   login.html 	modified:   registration.html 	modified:   style.css

--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 </head>
 <body class="bodyMain">
     <div class="registrationSection" >
-    <h2>Registration Page</h2>
+    <h2>Login</h2>
 
     <form class="formCont" id="register-form">
         <label for="email">Email:</label><br>
