--- a/login.html
+++ b/login.html
@@ -8,12 +8,12 @@
     <div class="registrationSection" >
     <h2>Login</h2>
 
-    <form class="formCont" id="register-form">
+    <form class="formCont" id="login-form">
         <label for="email">Email:</label><br>
         <input type="email" id="email" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" required><br>
-        <button type="submit">Register</button>
+        <button type="submit">Log In</button>
     </form>
   </div>
     <script type="module" src="/dist/bundle.js"> </script>
