Please enter the commit message for your changes. Lines starting  with '#' will be ignored, and an empty message aborts the commit. 	renamed:    fonts/Glancyr Variable-VF.ttf -> assets/fonts/Glancyr Variable-VF.ttf 	renamed:    images/.DS_Store -> assets/images/.DS_Store 	renamed:    images/First.png -> assets/images/First.png 	renamed:    images/Saturn.jpg -> assets/images/Saturn.jpg 	renamed:    images/Saturn.webp -> assets/images/Saturn.webp 	renamed:    images/Second.png -> assets/images/Second.png 	renamed:    images/Third.png -> assets/images/Third.png 	renamed:    images/craterLake.jpg -> assets/images/craterLake.jpg 	renamed:    images/heroImage.jpg -> assets/images/heroImage.jpg 	renamed:    images/heroImage.png -> assets/images/heroImage.png 	renamed:    images/logo.png -> assets/images/logo.png 	renamed:    images/moon.png -> assets/images/moon.png 	renamed:    images/redRock.jpg -> assets/images/redRock.jpg 	renamed:    images/rocket1.png -> assets/images/rocket1.png 	renamed:    style.css -> assets/style.css 	modified:   index.html 	renamed:    booking.html -> src/booking.html 	renamed:    login.html -> src/login.html 	renamed:    registration.html -> src/registration.html

--- a/src/registration.html
+++ b/src/registration.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <title>Registration Page</title>
 </head>
 <body class="bodyMain">
     <div class="registrationSection" >
-    <h2>Login</h2>
+    <h2>Registration Page</h2>
 
-    <form class="formCont" id="login-form">
+    <form class="formCont" id="register-form">
         <label for="email">Email:</label><br>
         <input type="email" id="email" required><br>
         <label for="password">Password:</label><br>
         <input type="password" id="password" required><br>
-        <button type="submit">Log In</button>
+        <button type="submit">Register</button>
     </form>
   </div>
     <script type="module" src="/dist/bundle.js"> </script>
