--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Galactic Getaways: Your Next Adventure Awaits!</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
     <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
     <script type="module" src="/dist/bundle.js"> </script>
 </head>
 <body class="bodyMain">
     <div class="navCont">
     <nav class="navBar">
-        <img class="logo" src="images/logo.png" alt="logo">
+        <img class="logo" src="/assets/images/logo.png" alt="logo">
         <ul class="navList">
             <li class="navItem"><a href="#">Home</a></li>
             <li class="navItem"><a href="#">Our Ships</a></li>
@@ -65,7 +65,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/First.png" alt="craterLake">
+    <img class="imageitem" src="/assets/images/First.png" alt="craterLake">
     </div>
 
 </section>
@@ -93,7 +93,7 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images/Second.png" alt="craterLake">
+    <img class="imageitem" src="/assets/images/Second.png" alt="craterLake">
 
     </div>
 
@@ -122,14 +122,14 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="images//Third.png" alt="craterLake">
+    <img class="imageitem" src="/assets/images/Third.png" alt="craterLake">
     </div>
 
 </section>
 <footer>
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="images/logo.png" alt="Your Logo">
+            <img src="/assets/images/logo.png" alt="Your Logo">
         </div>
         <div class="footer-links">
             <a href="#">Resources</a>
