modified:   assets/style.css 	modified:   dist/anotherBundle.js 	modified:   index.html 	modified:   src/login.js

--- a/index.html
+++ b/index.html
@@ -15,9 +15,14 @@
             <li class="navItem"><a href="#">Home</a></li>
             <li class="navItem"><a href="#">Our Ships</a></li>
             <li class="navItem"><a href="#">Team</a></li>
-            <li class="navItem"><a href="#"><i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In/Sign-up </a></li>
-            <button class="buttonLight"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Book a Trip</button>
+            <li class="navItem"><a href="#">About</a></li>
         </ul>
+        <a href="/src/login.html">
+            <button style="width: 200px;" class="buttonLight">
+              <i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In
+            </button>
+          </a>
+      <a href="/src/registration.html"><button style="width: 260px;" class="buttonDark"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Get Started</button></a>
     </nav>
     </div>
 <section class="heroSection">
@@ -27,7 +32,14 @@
             <h1 class="sectionTitle" style="font-size: 4em; text-align: center;">Your Next Adventure Awaits!</h1>
             <p class="sectionDescription" style="font-size: 1.2em; text-align: center !important;">Galactic Getaways offers the best vacation packages in the solar system. From the
                 moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
-            <button class="buttonDark"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Get Started</button>
+                <div class="departureDates" style="margin-top: 19px;" >
+                    <a href="/src/registration.html"><button style="width: 200px;" class="buttonDark"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Get Started</button></a>
+                    <a href="/src/login.html">
+                        <button style="width: 200px;" class="buttonLight">
+                          <i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In
+                        </button>
+                      </a>
+                </div>
         </div>
 
 
