modified:   index.html

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <li class="navItem"><a href="#">About</a></li>
         </ul>
         <a href="/src/login.html">
-            <button style="width: 200px;" class="buttonLight">
+            <button style="width: 150px;" class="buttonLight">
               <i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In
             </button>
           </a>
-      <a href="/src/registration.html"><button style="width: 260px;" class="buttonDark"><i class="fa-solid fa-ticket" style="margin-right: 4px;"></i> Get Started</button></a>
+      <a href="/src/registration.html"><button style="width: 150px;" class="buttonDark">Get Started</button></a>
     </nav>
     </div>
 <section class="heroSection">
