modified:   index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         price: <span class="price">$120,000 USD</span> per person
     </p>
     <div class="departureDates" style="margin-top: 19px;" >
-    <a href="booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
+    <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
     <button class="buttonDark">Learn More</button>
 </div>
     </div>
@@ -99,7 +99,7 @@
         price: <span class="price">$120,000 USD</span> per person
     </p>
     <div class="departureDates" style="margin-top: 19px;" >
-    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+        <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
     <button class="buttonDark">Learn More</button>
 </div>
     </div>
@@ -128,7 +128,7 @@
         price: <span class="price">$120,000 USD</span> per person
     </p>
     <div class="departureDates" style="margin-top: 19px;" >
-    <button class="buttonLight" style="margin-right: 10px;">Begin Booking</button>
+        <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
     <button class="buttonDark">Learn More</button>
 </div>
     </div>
