modified:   src/booking.html

--- a/src/booking.html
+++ b/src/booking.html
@@ -5,11 +5,11 @@
 	<meta charset="utf-8">
 	<title>Wizard V1</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.css">
-	<link rel="stylesheet" href="assets/css/animate.min.css">
-	<link rel="stylesheet" href="assets/css/fontawesome-all.css">
-	<link rel="stylesheet" href="assets/css/style.css">
+	<link rel="stylesheet" href="/assets/css/animate.min.css">
+	<link rel="stylesheet" href="/assets/css/fontawesome-all.css">
+	<link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<div class="steps-area steps-area-fixed">
 			<div class="image-holder">
-				<img src="assets/img/side-img.jpg" alt="">
+				<img src="/assets/img/side-img.jpg" alt="">
 			</div>
 			<div class="steps clearfix">
 				<ul class="tablist multisteps-form__progress">
@@ -56,7 +56,7 @@
 											<div class="col-md-4">
 												<label class="step-box-content bg-white text-center relative-position active">
 													<span class="step-box-icon">
-														<img src="assets/img/d1.png" alt="">
+														<img src="/assets/img/d1.png" alt="">
 													</span>
 													<span class="step-box-text">
 														Corporate Services
@@ -69,7 +69,7 @@
 											<div class="col-md-4">
 												<label class="step-box-content bg-white text-center relative-position">
 													<span class="step-box-icon">
-														<img src="assets/img/d2.png" alt="">
+														<img src="/assets/img/d2.png" alt="">
 													</span>
 													<span class="step-box-text">
 														Freelancing Serivces
@@ -82,7 +82,7 @@
 											<div class="col-md-4">
 												<label class="step-box-content bg-white text-center relative-position">
 													<span class="step-box-icon">
-														<img src="assets/img/d3.png" alt="">
+														<img src="/assets/img/d3.png" alt="">
 													</span>
 													<span class="step-box-text">
 														Development
@@ -360,12 +360,12 @@
 			</div>
 		</form>
 	</div>
-	<script src="assets/js/jquery-3.3.1.min.js"></script>
-	<script src="assets/js/jquery.validate.min.js"></script>
+	<script src="/assets/js/jquery-3.3.1.min.js"></script>
+	<script src="/assets/js/jquery.validate.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/main.js"></script>
-	<script src="assets/js/switch.js"></script>
+	<script src="/assets/js/bootstrap.min.js"></script>
+	<script src="/assets/js/main.js"></script>
+	<script src="/assets/js/switch.js"></script>
 	<script>
 		$("#files").change(function() {
 			filename = this.files[0].name
