--- a/src/login.html
+++ b/src/login.html
@@ -16,6 +16,6 @@
         <button type="submit">Log In</button>
     </form>
   </div>
-  <script type="module" src="/dist/anotherBundle.js"> </script>
+  <script type="module" src="/dist/bundleLogin.js"> </script>
 </body>
 </html>
