modified:   .DS_Store 	deleted:    assets/css/animate.min.css 	deleted:    assets/css/bootstrap.min.css 	deleted:    assets/css/colors/Preloader.gif 	deleted:    assets/css/colors/color-2.css 	deleted:    assets/css/colors/color-3.css 	deleted:    assets/css/colors/color-4.css 	deleted:    assets/css/colors/color-5.css 	deleted:    assets/css/colors/default.css 	deleted:    assets/css/colors/switch.css 	deleted:    assets/css/fontawesome-all.css 	deleted:    assets/css/style.css 	deleted:    assets/fonts/fa-brands-400.eot 	deleted:    assets/fonts/fa-brands-400.svg 	deleted:    assets/fonts/fa-brands-400.ttf 	deleted:    assets/fonts/fa-brands-400.woff 	deleted:    assets/fonts/fa-brands-400.woff2 	deleted:    assets/fonts/fa-regular-400.eot 	deleted:    assets/fonts/fa-regular-400.svg 	deleted:    assets/fonts/fa-regular-400.ttf 	deleted:    assets/fonts/fa-regular-400.woff 	deleted:    assets/fonts/fa-regular-400.woff2 	deleted:    assets/fonts/fa-solid-900.eot 	deleted:    assets/fonts/fa-solid-900.svg 	deleted:    assets/fonts/fa-solid-900.ttf 	deleted:    assets/fonts/fa-solid-900.woff 	deleted:    assets/fonts/fa-solid-900.woff2 	new file:   assets/images/RegLeft.jpg 	deleted:    assets/img/d1.png 	deleted:    assets/img/d2.png 	deleted:    assets/img/d3.png 	deleted:    assets/img/side-img.jpg 	deleted:    assets/js/bootstrap.min.js 	deleted:    assets/js/conditionize.flexible.jquery.min.js 	deleted:    assets/js/jquery-3.3.1.min.js 	deleted:    assets/js/jquery.validate.min.js 	deleted:    assets/js/main.js 	deleted:    assets/js/popper.min.js 	deleted:    assets/js/switch.js 	deleted:    assets/scss/_predefine.scss 	deleted:    assets/scss/_responsive.scss 	deleted:    assets/scss/_template.scss 	deleted:    assets/scss/_wizard.scss 	deleted:    assets/scss/style.scss 	modified:   assets/style.css 	modified:   dist/bundle.js 	new file:   dist/bundleLogUser.js 	modified:   src/index.js 	modified:   src/login.html 	modified:   src/registration.html 	modified:

--- a/src/login.html
+++ b/src/login.html
@@ -5,6 +5,23 @@
     <title>Registration Page</title>
 </head>
 <body class="bodyMain">
+    <div class="navCont">
+        <nav class="navBar">
+            <img class="logo" src="/assets/images/logo.png" alt="logo">
+            <ul class="navList">
+                <li class="navItem"><a href="#">Home</a></li>
+                <li class="navItem"><a href="#">Our Ships</a></li>
+                <li class="navItem"><a href="#">Team</a></li>
+                <li class="navItem"><a href="#">About</a></li>
+            </ul>
+            <a href="/src/login.html">
+                <button style="width: 150px;" class="buttonLight">
+                  <i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In
+                </button>
+              </a>
+          <a href="/src/registration.html"><button style="width: 150px;" class="buttonDark">Get Started</button></a>
+        </nav>
+        </div>
     <div class="registrationSection" >
     <h2>Login</h2>
 
