--- a/src/registration.html
+++ b/src/registration.html
@@ -2,20 +2,59 @@
 <html>
 <head>
     <link rel="stylesheet" href="/assets/style.css">
+    <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
     <title>Registration Page</title>
 </head>
 <body class="bodyMain">
+    <div class="navCont">
+        <nav class="navBar">
+            <img class="logo" src="/assets/images/logo.png" alt="logo">
+            <ul class="navList">
+                <li class="navItem"><a href="/index.html">Home</a></li>
+                <li class="navItem"><a href="#">Our Ships</a></li>
+                <li class="navItem"><a href="#">Team</a></li>
+                <li class="navItem"><a href="#">About</a></li>
+            </ul>
+            
+          <a href="/src/registration.html"><button style="width: 180px;" class="buttonLight"><i class="fa-regular fa-life-ring" style="margin-right: 15px;"></i>Get Support</button></a>
+        </nav>
+        </div>
     <div class="registrationSection" >
-    <h2>Registration Page</h2>
+        <div class="regLeft">
+            <div class="regText">
 
-    <form class="formCont" id="register-form">
-        <label for="email">Email:</label><br>
-        <input type="email" id="email" required><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" required><br>
-        <button type="submit">Register</button>
-    </form>
+            <h2>Register</h2>
+            <p style="font-size: 1.5rem; font-weight: 200; ">Already have an account? <a style="font-weight: 600;" href="/src/login.html">Log in</a></p>
+        </div>
+        </div>
+        <div class="regRight"  >
+            <form class="formCont" id="register-form">
+                <label class="inputLabel" for="email">Email:</label><br>
+                <input type="email" id="email" required><br>
+                <label class="inputLabel" for="password">Password:</label><br>
+                <input type="password" id="password" required><br>
+                <button class="buttonDark" type="submit">Register</button>
+            </form>
+        </div>
   </div>
+  <footer>
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="/assets/images/logo.png" alt="Your Logo">
+        </div>
+        <div class="footer-links">
+            <a href="#">Resources</a>
+            <a href="#">Docs</a>
+            <a href="#">Style Guide</a>
+            <a href="#">Repo </a>
+        </div>
+        <div class="footer-social">
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-twitter"></i> Twitter or X </a>
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
+            <a class="footericonlinks" href="#"><i class="fa-brands fa-facebook-f"></i> Facebook</a>
+        </div>
+    </div>
+</footer>
     <script type="module" src="/dist/bundle.js"> </script>
 </body>
 </html>
