modified:   assets/style.css 	modified:   src/registration.html

--- a/src/registration.html
+++ b/src/registration.html
@@ -23,17 +23,30 @@
         <div class="regLeft">
             <div class="regText">
 
-            <h2>Register</h2>
-            <p style="font-size: 1.5rem; font-weight: 200; ">Already have an account? <a style="font-weight: 600;" href="/src/login.html">Log in</a></p>
+            <h2>Welcome to Space Experiences</h2>
+            <p style="font-size: 1.3rem; line-height: 30px; font-weight: 200; ">Already have an account? <a style="font-weight: 600;" href="/src/login.html">Log in</a>
+                <br>
+                <br>
+            
+                Having Trouble with Registration or Signing In? <br>
+                <br>
+
+                We're here to help! If you're encountering any difficulties during the registration process or while signing in, don't worry. We've got a couple of options for you:
+                <br>
+                <br>
+                
+                Check Our <a style="color: rgb(88, 133, 196);" href="">Documentation</a>: Sometimes a quick look at our User Guide can solve the common issues you might face. It's packed with step-by-step instructions and helpful tips to guide you through.
+               </p>
         </div>
         </div>
         <div class="regRight"  >
             <form class="formCont" id="register-form">
                 <label class="inputLabel" for="email">Email:</label><br>
-                <input type="email" id="email" required><br>
+                <input class="inputBar" type="email" placeholder="Your@email.com" id="email" required><br>
                 <label class="inputLabel" for="password">Password:</label><br>
-                <input type="password" id="password" required><br>
-                <button class="buttonDark" type="submit">Register</button>
+                <input class="inputBar" type="password" placeholder="*****" id="password" required><br>
+                <button class="buttonDark" type="submit">Sign Up</button>
+              <p>  Already have an account? <a style="font-weight: 600;" href="/src/login.html">Log in</a></p>
             </form>
         </div>
   </div>
