--- a/index.html
+++ b/index.html
@@ -105,7 +105,14 @@
     </div>
 
     <div class="rightContent">
-    <img class="imageitem" src="/assets/images/Second.png" alt="craterLake">
+   <script>
+    import { Application } from '@splinetool/runtime';
+
+const canvas = document.getElementById('canvas3d');
+const app = new Application(canvas);
+app.load('https://prod.spline.design/PVLBdf8lH7AY7QJx/scene.splinecode');
+
+   </script>
 
     </div>
 
