new file:   assets/images/LoginLeft.jpg 	modified:   assets/style.css 	new file:   dist/bundleSpline.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_boolean_js.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_navmesh_js.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_opentype_js.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_physics_js.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_process_js.js 	new file:   dist/vendors-node_modules_splinetool_runtime_build_ui_js.js 	modified:   index.html 	modified:   package-lock.json 	modified:   package.json 	modified:   src/login.html 	new file:   src/spline.js 	modified:   webpack.config.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Galactic Getaways: Your Next Adventure Awaits!</title>
     <link rel="stylesheet" href="/assets/style.css">
     <script src="https://kit.fontawesome.com/e6a78a7701.js" crossorigin="anonymous"></script>
+    <script type="module" src="/dist/bundleSpline.js"> </script>
     
 </head>
 <body class="bodyMain">
@@ -49,6 +50,40 @@
    
 </section>
 
+<section class="tripSingleItem">
+    <div class="leftContent">
+    <h2 class="sectionTitle">
+        Ringside Expidition: A Saturn Spectacular
+    </h2>
+    <p class="sectionDescription">
+        Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
+    </p>
+    <div class="departureDates">
+        <h3 style="margin-right: 20px;"><i class="fa-solid fa-calendar-days" style="margin-right: 4px;"></i>  Next Departures</h3><p> January / 3rd / 2024</p>
+    </div>
+    <div class="departureDates" style="margin-top: -20px;">
+        <h3 style="margin-right: 20px;"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Space Ship</h3><p> Falcon F9 by SpaceX</p>
+    </div>
+    <p>
+        price: <span class="price">$120,000 USD</span> per person
+    </p>
+    <div class="departureDates" style="margin-top: 19px;" >
+        <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
+    <button class="buttonDark">Learn More</button>
+</div>
+    </div>
+
+    <div class="rightContent">
+        
+
+<canvas style="width: 100%; height: auto;" id="canvas3d">
+
+
+</canvas>
+<h3 style="margin-right: 20px;"> <i class="fa-brands fa-unity" style="margin-right: 4px;"></i> Rotate Me </h3>
+    </div>
+
+</section>
 
 <section class="tripSingleItem">
     <div class="leftContent">
@@ -81,42 +116,7 @@
     </div>
 
 </section>
-<section class="tripSingleItem">
-    <div class="leftContent">
-    <h2 class="sectionTitle">
-        Ringside Expidition: A Saturn Spectacular
-    </h2>
-    <p class="sectionDescription">
-        Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
-    </p>
-    <div class="departureDates">
-        <h3 style="margin-right: 20px;"><i class="fa-solid fa-calendar-days" style="margin-right: 4px;"></i>  Next Departures</h3><p> January / 3rd / 2024</p>
-    </div>
-    <div class="departureDates" style="margin-top: -20px;">
-        <h3 style="margin-right: 20px;"> <i class="fa-brands fa-space-awesome" style="margin-right: 4px;"></i> Space Ship</h3><p> Falcon F9 by SpaceX</p>
-    </div>
-    <p>
-        price: <span class="price">$120,000 USD</span> per person
-    </p>
-    <div class="departureDates" style="margin-top: 19px;" >
-        <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;">Begin Booking</button></a>
-    <button class="buttonDark">Learn More</button>
-</div>
-    </div>
 
-    <div class="rightContent">
-   <script>
-    import { Application } from '@splinetool/runtime';
-
-const canvas = document.getElementById('canvas3d');
-const app = new Application(canvas);
-app.load('https://prod.spline.design/PVLBdf8lH7AY7QJx/scene.splinecode');
-
-   </script>
-
-    </div>
-
-</section>
 <section class="tripSingleItem">
     <div class="leftContent">
     <h2 class="sectionTitle">
