--- a/src/login.html
+++ b/src/login.html
@@ -20,7 +20,7 @@
       </nav>
       </div>
   <div class="registrationSection" >
-      <div class="regLeft">
+      <div class="regLeft1">
           <div class="regText">
 
           <h2>Log in to your account</h2>
