--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
 </canvas>
-<h3 style="margin-right: 20px;"> <i class="fa-brands fa-unity" style="margin-right: 4px;"></i> Rotate Me </h3>
+<h3 style="margin-right: 20px; font-weight: 200;"> <i class="fa-brands fa-unity" style="margin-right: 4px;"></i> Rotate Me </h3>
     </div>
 
 </section>
