modified:   index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="leftContent1">
 
         <div class="heroText">
-            <h1 class="sectionTitle" style="font-size: 4em; text-align: center; text-align: start;">Your Next Adventure Awaits!</h1>
+            <h1 class="sectionTitle" style="font-size: 4em; text-align: center; text-align: start;">Book Your Next Adventure Now !</h1>
             <div id="space-flight-finder">
                 <!-- Origin and Destination -->
                 <input type="text" id="origin" placeholder="Departure Station">
