modified:   index.html

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <li class="navItem"><a href="#">About</a></li>
         </ul>
         <a href="/src/login.html">
-            <button style="width: 150px;" class="buttonLight">
-              <i class="fa-regular fa-user" style="margin-right: 4px;"></i> Log In
+            <button style="width: 132px;" class="buttonLight">
+                <i class="fa-solid fa-right-to-bracket" style="margin-right: 5px;"></i> Log In
             </button>
           </a>
-      <a href="/src/registration.html"><button style="width: 150px;" class="buttonDark">Get Started</button></a>
+      <a href="/src/registration.html"><button style="width: 180px;" class="buttonDark"> <i class="fa-brands fa-space-awesome" style="margin-right: 15px;"></i>Get Started</button></a>
     </nav>
     </div>
 <section class="heroSection">
