modified:   assets/style.css 	modified:   src/login.html 	modified:   src/registration.html

--- a/src/login.html
+++ b/src/login.html
@@ -40,7 +40,7 @@
       </div>
       </div>
       <div class="regRight"  >
-          <form class="formCont" id="login-form">
+          <form class="formCont1" id="login-form">
               <label class="inputLabel" for="email">Email:</label><br>
               <input class="inputBar" type="email" placeholder="Your@email.com" id="email" required><br>
               <label class="inputLabel" for="password">Password:</label><br>
