--- a/src/registration.html
+++ b/src/registration.html
@@ -41,6 +41,10 @@
         </div>
         <div class="regRight"  >
             <form class="formCont" id="register-form">
+                <label class="inputLabel" for="email">First Name</label><br>
+                <input class="inputBar" type="email" placeholder="First Name" id="email" required><br>
+                <label class="inputLabel" for="email">Last Name</label><br>
+                <input class="inputBar" type="email" placeholder="Last Name" id="email" required><br>
                 <label class="inputLabel" for="email">Email:</label><br>
                 <input class="inputBar" type="email" placeholder="Your@email.com" id="email" required><br>
                 <label class="inputLabel" for="password">Password:</label><br>
