--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div class="leftContent1">
 
         <div class="heroText">
-            <h1 class="sectionTitle" style="font-size: 4em; text-align: center; text-align: start;">Book Your Next Adventure Now !</h1>
+            <h1 class="sectionTitle" style="font-size: 3em; text-align: center; text-align: start;">Book Your Next <br>
+                Interstellar Adventure</h1>
             <div id="space-flight-finder">
                 <!-- Origin and Destination -->
                 <input type="text" id="origin" placeholder="Departure Station">
@@ -80,7 +81,7 @@
 <section class="tripSingleItem">
     <div class="leftContent">
     <h2 class="sectionTitle">
-        Ringside Expidition: A Saturn Spectacular
+        Ringside Expidition: A Jupiter Spectacular
     </h2>
     <p class="sectionDescription">
         Get up close and personal with Saturn's majestic rings. Our exclusive space yacht, The Ring Dancer, offers guided tours through the A and B rings. Witness the awe-inspiring beauty of ice particles shimmering in the sunlight. A must-visit for any cosmic explorer!
