modified:   assets/images/.DS_Store 	modified:   assets/images/heroImage.png 	modified:   assets/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <!-- Special Accommodations -->
                 <div class="accommodations">
                     <label><input type="checkbox" id="zero-gravity-experience"> Zero Gravity Experience</label>
-                    <label><input type="checkbox" id="spacewalk"> Spacewalk</label>
+                    <label>
                     <label><input type="checkbox" id="mars-rover-tour"> Mars Rover Tour</label>
                 </div>
             
@@ -67,7 +67,7 @@
                 <button id="search-space-flights">Find Space Tour</button>
             </div>
             <div style="display: flex; flex-direction: row; justify-content: start; align-items: center; width:100%; height:70px; margin-bottom: -20px;" > <p>Powered By  </p> <img style="width: 8%; height: auto; margin-left: 10px;" src="/assets/images/nasalog.png" alt=""></div>
-                <p class="sectionDescription" style="font-size: 1.2em; text-align: Start !important;">Galactic Getaways offers the best vacation packages in the solar system. From the
+                <p class="sectionDescription" style="font-size: 1.2em; text-align: start !important;">Galactic Getaways offers the best vacation packages in the solar system. From the
                     moons of Jupiter to the rings of Saturn, we have it all. Book your next adventure today!</p>
         </div>
 
