modified:   .DS_Store 	modified:   assets/style.css 	modified:   index.html 	modified:   src/spline.js

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
     </div>
 <section class="heroSection">
-    <div class="leftContent1">
+    <div class="heroLeftDiv">
 
         <div class="heroText">
             <h1 class="sectionTitle" style="font-size: 3em; text-align: center; text-align: start;">Book Your Next <br>
@@ -75,7 +75,9 @@
     </div>
         
     </div>
-   
+   <div class="heroRightDiv">
+    
+   </div>
 </section>
 
 <section class="tripSingleItem">
@@ -113,7 +115,7 @@
 
 </section>
 
-<footer>
+<footer class="footer">
     <div class="footer-container">
         <div class="footer-logo">
             <img src="/assets/images/logo.png" alt="Your Logo">
