--- a/src/login.html
+++ b/src/login.html
@@ -53,7 +53,7 @@
           </form>
       </div>
 </div>
-<footer>
+<footer class="footer">
   <div class="footer-container">
       <div class="footer-logo">
           <img src="/assets/images/logo.png" alt="Your Logo">
