--- a/src/registration.html
+++ b/src/registration.html
@@ -54,7 +54,7 @@
             </form>
         </div>
   </div>
-  <footer>
+  <footer class="footer">
     <div class="footer-container">
         <div class="footer-logo">
             <img src="/assets/images/logo.png" alt="Your Logo">
