modified:   assets/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 <body class="bodyMain">
 
 <section class="finderSection">
-  <div class="heroFinderDiv">
 
-       
-      
+<div class="finderNavigation">
+
+    <img style="margin-left: -30px;" src="/assets/images/logo.png" alt="">
+    <div class="navItems" >
+    <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-triangle-exclamation"></i>Elgibility</div></a>
+    <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-earth-europe"></i>Resources</div></a>
+    <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-user"></i>Log In </div></a>
+    </div>
+
+</div>
+
+  <div class="heroFinderDiv">
             <!-- Origin and Destination -->
                 <div id="space-flight-finder">
                     <div style="width: 800px;">
