modified:   assets/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
 <div class="finderNavigation">
 
-    <img style="margin-left: -30px;" src="/assets/images/logo.png" alt="">
+    <img style="margin-left: -50px;" src="/assets/images/logo.png" alt="">
     <div class="navItems" >
     <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-triangle-exclamation"></i>Elgibility</div></a>
     <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-earth-europe"></i>Resources</div></a>
-    <a href=""><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-user"></i>Log In </div></a>
+    <a href="/src/login.html"><div class="navItem"><i style="margin-right: 10px;" class="fa-solid fa-user"></i>Log In </div></a>
     </div>
 
 </div>
@@ -42,12 +42,13 @@
                   <!-- Search Button -->
                 <button style="width: 100px; " id="search-space-flights">Search</button>
             
-               <div style="margin-top: 10px;" class="trip-type">
-                <label><input type="radio" name="trip-type" value="one-way"> One-Way</label>
-                <label><input type="radio" name="trip-type" value="round-trip" checked> Round-Trip</label>
+              
             </div>
                      <!-- Special Accommodations -->
         <div style="margin-top: 10px;" class="accommodations">
+            <div style="margin-top: 10px;" class="trip-type">
+                <label><input type="radio" name="trip-type" value="one-way"> One-Way</label>
+                <label><input type="radio" name="trip-type" value="round-trip" checked> Round-Trip</label>
             <label><input type="checkbox" id="zero-gravity-experience"> Zero Gravity Experience</label>
             <label>
             <label><input type="checkbox" id="mars-rover-tour"> Mars Rover Tour</label>
@@ -162,7 +163,7 @@
 <footer class="footer">
     <div class="footer-container">
         <div class="footer-logo">
-            <img src="/assets/images/logo.png" alt="Your Logo">
+            <img style="margin-left: -50px;" src="/assets/images/logo.png" alt="Your Logo">
         </div>
         <div class="footer-links">
             <a href="#">Resources</a>
