modified:   assets/style.css 	modified:   index.html 	modified:   src/login.html

--- a/src/login.html
+++ b/src/login.html
@@ -47,7 +47,7 @@
               <input class="inputBar" type="password" placeholder="*****" id="password" required><br>
               <div class="departureDates" style="margin-top: 19px;" >
                 <a href="/src/booking.html"><button class="buttonLight" style="margin-right: 10px;"><i class="fa-solid fa-right-to-bracket" style="margin-right: 15px;"></i>Log In</button></a>
-                <button class="buttonDark">Sign Up</button>
+               <a href="/src/registration.html"> <div class="buttonDark">Sign Up</div></a>
             </div>
             <p>  Trouble Signing Up ? <a style="font-weight: 600; color: rgb(88, 133, 196)" href="/src/login.html">Reset Password</a></p>
           </form>
